reduce font size for permission text to avoid overflow

--- a/src/styl/extended-mraid.styl
+++ b/src/styl/extended-mraid.styl
@@ -278,7 +278,7 @@ $camera-permission-panel-height = 100vw;
     .permission-text {
       margin: 0 0 8px;
       text-align: center;
-      font-size: $default-font-size * .85;
+      font-size: $default-font-size * .75;
     }
 
     .arads-logo {
